Closed Bug 1651286 Opened 4 years ago Closed 4 years ago

PeerConnectionImpl.cpp: PeerConnectionImpl::CreatePeerConnection() appears to dereference NULL

Categories

(Core :: WebRTC, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla80
Tracking Status
firefox80 --- fixed

People

(Reporter: izbyshev, Assigned: mjf)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

Unless I'm mistaken, the call at https://searchfox.org/mozilla-central/rev/7ec7ee4a/media/webrtc/signaling/src/peerconnection/PeerConnectionImpl.cpp#238 always crashes because of the following:

Component: Source Code Analysis → WebRTC
Product: Firefox Build System → Core
Assignee: nobody → mfroman
Severity: -- → S3
Priority: -- → P2
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Pushed by mfroman@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/1f31aaa73c38
remove unused static method PeerConnectionImpl::CreatePeerConnection. r=bwc
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla80
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: