Bug 1651286 - remove unused static method PeerConnectionImpl::CreatePeerConnection. r=bwc

Differential Revision: https://phabricator.services.mozilla.com/D82781